# ai-powerlifting

./: .gitignore  AGENTS.md  BUDGET_FEATURE_SPEC.md  CONTEXT.md  PLAN_READONLY_UI.md  POWERLIFTING_FEATURES_BACKLOG.md  PROJECT_STRUCTURE.md  README.md  bug.md  clean.py  design.md  domain.yaml  dynamo_sessions.json  package-lock.json  package.json  past.csv  plan.md  refactor_progress.md  refactor_scope.md
.claude/: CLAUDE.md
app/: .env.example  main_system_prompt.txt  requirements.txt
backend/: .env.example  FISSION_REPLACEMENT_GAP.md  package.json  tsconfig.json
docker/: build.pkr.hcl  mcp-server-entrypoint.sh  mcp-server.pkr.hcl  opencode-runner.pkr.hcl  portals-backend.pkr.hcl  portals-frontend.pkr.hcl  powerlifting-backend.pkr.hcl  powerlifting-fn.pkr.hcl  powerlifting-frontend.pkr.hcl
docs/: ANALYTICS_CALCULATIONS_MIGRATION.md  ARCHITECTURE.md  FORMULAS.md  LAMBDA_DOMAIN_GROUPING.md  OPENCODE_MCP_MIGRATION.md  SERVICE_SPLIT_PLAN.md  THINGS_TO_EXPLORE.md  channel-plan.md
frontend/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
infra/: backend.yaml  frontend.yaml  kustomization.yaml
lambda/: AGENT_HANDOFF.md  FISSION_DEPLOY.md  FISSION_MIGRATION_PLAN.md  FISSION_PHASE0_AUDIT.md  FISSION_PHASE4_HPA.md  HEALTH_LAMBDA_MIGRATION_PLAN.md  fission-deploy.py  fission_build.sh  fission_entry.py  fission_layers.py  fission_server.py
models/: model_ids.txt  model_selection_rules.md
plans/: channel-plan.md  plan.md  powerlifting-master-comps-federations.md  (+3 more)
utils/opencode-runner/: Cargo.toml
utils/opencode-runner/src/: main.rs
(+1649 files in other folders)
