[package]
name = "opencode-runner"
version = "0.1.0"
edition = "2021"
publish = false
description = "Fission newdeploy job pod that runs OpenCode for the IF agent execution phase. One-shot: accepts a single HTTP request, runs OpenCode, returns the response, exits."

[profile.release]
opt-level = "z"     # optimise for size; this binary is tiny
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Sync, allocation-bounded HTTP server. No async runtime, no tokio, no GC.
# tiny_http is a single small crate; we only need GET/POST with a JSON body.
tiny_http = "0.12"

# JSON request/response.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
